--- a/Meta Analysis/cholesterol-calcium.html
+++ b/Meta Analysis/cholesterol-calcium.html
@@ -151,7 +151,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <span id="cb1-2"><a href="#cb1-2" aria-hidden="true" tabindex="-1"></a><span class="fu">library</span>(readr)</span>
 <span id="cb1-3"><a href="#cb1-3" aria-hidden="true" tabindex="-1"></a>data <span class="ot">&lt;-</span> <span class="fu">read_csv</span>(data.sheet)<span class="co">#from a google sheet</span></span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-<p>The data can be found in the google sheet https://docs.google.com/spreadsheets/d/e/2PACX-1vTyvQnc6bLRLGT6QXEMHxiAQVbK_zag_JIAjvYjTMXINcqdkBwglmg_mlj_k9ml9QsrNQl-tZgy8ACl/pub?gid=1100702568&amp;single=true&amp;output=csv. This script can be found in /Users/davebrid/Documents/GitHub/PrecisionNutrition/Meta Analysis and was most recently run on Thu Apr 20 09:18:10 2023</p>
+<p>The data can be found in the google sheet https://docs.google.com/spreadsheets/d/e/2PACX-1vTyvQnc6bLRLGT6QXEMHxiAQVbK_zag_JIAjvYjTMXINcqdkBwglmg_mlj_k9ml9QsrNQl-tZgy8ACl/pub?gid=1100702568&amp;single=true&amp;output=csv. This script can be found in /Users/davebrid/Documents/GitHub/PrecisionNutrition/Meta Analysis and was most recently run on Mon Oct 30 11:00:09 2023</p>
 </section>
 <section id="meta-analysis" class="level2">
 <h2 class="anchored" data-anchor-id="meta-analysis">Meta Analysis</h2>
@@ -179,7 +179,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </section>
 <section id="analysis" class="level1">
 <h1>Analysis</h1>
-<p>There is solid evidence of cross-sectional associations between cholesterol and calcium levels in multiple studies</p>
+<p>There is solid evidence of cross-sectional associations between cholesterol and calcium levels in multiple studies. The aggregate effect size is 0.17 +/- 0.018 (p=4.15^{-8}).</p>
 </section>
 <section id="session-information" class="level1">
 <h1>Session Information</h1>
@@ -201,24 +201,27 @@ attached base packages:
 [1] stats     graphics  grDevices utils     datasets  methods   base     
 
 other attached packages:
-[1] tidyr_1.3.0 meta_6.1-0  readr_2.1.3 knitr_1.41 
+[1] tidyr_1.3.0 meta_6.5-0  readr_2.1.4 knitr_1.44 
 
 loaded via a namespace (and not attached):
- [1] tidyselect_1.2.0   xfun_0.36          purrr_1.0.1        splines_4.2.2     
- [5] lattice_0.20-45    vctrs_0.5.2        generics_0.1.3     htmltools_0.5.4   
- [9] yaml_2.3.6         utf8_1.2.2         rlang_1.0.6        pillar_1.8.1      
-[13] nloptr_2.0.3       DBI_1.1.3          glue_1.6.2         bit64_4.0.5       
-[17] lifecycle_1.0.3    stringr_1.5.0      htmlwidgets_1.6.1  evaluate_0.19     
-[21] tzdb_0.3.0         fastmap_1.1.0      metafor_3.8-1      parallel_4.2.2    
-[25] curl_4.3.3         fansi_1.0.3        Rcpp_1.0.9         vroom_1.6.0       
-[29] jsonlite_1.8.4     bit_4.0.5          lme4_1.1-31        hms_1.1.2         
-[33] digest_0.6.31      stringi_1.7.12     dplyr_1.0.10       CompQuadForm_1.4.3
-[37] grid_4.2.2         mathjaxr_1.6-0     cli_3.6.0          tools_4.2.2       
-[41] magrittr_2.0.3     tibble_3.1.8       crayon_1.5.2       pkgconfig_2.0.3   
-[45] ellipsis_0.3.2     MASS_7.3-58.1      Matrix_1.5-3       xml2_1.3.3        
-[49] assertthat_0.2.1   minqa_1.2.5        rmarkdown_2.19     rstudioapi_0.14   
-[53] R6_2.5.1           boot_1.3-28.1      metadat_1.2-0      nlme_3.1-161      
-[57] compiler_4.2.2    </code></pre>
+ [1] Rcpp_1.0.11         mathjaxr_1.6-0      nloptr_2.0.3       
+ [4] pillar_1.9.0        compiler_4.2.2      tools_4.2.2        
+ [7] metadat_1.2-0       boot_1.3-28.1       digest_0.6.33      
+[10] lme4_1.1-34         bit_4.0.5           nlme_3.1-163       
+[13] jsonlite_1.8.7      evaluate_0.22       lifecycle_1.0.3    
+[16] tibble_3.2.1        lattice_0.21-9      pkgconfig_2.0.3    
+[19] rlang_1.1.1         Matrix_1.5-4.1      cli_3.6.1          
+[22] rstudioapi_0.15.0   curl_5.1.0          yaml_2.3.7         
+[25] parallel_4.2.2      CompQuadForm_1.4.3  xfun_0.40          
+[28] fastmap_1.1.1       dplyr_1.1.3         xml2_1.3.5         
+[31] metafor_4.4-0       generics_0.1.3      vctrs_0.6.4        
+[34] htmlwidgets_1.6.2   hms_1.1.3           bit64_4.0.5        
+[37] grid_4.2.2          tidyselect_1.2.0    glue_1.6.2         
+[40] R6_2.5.1            fansi_1.0.5         vroom_1.6.4        
+[43] rmarkdown_2.25      minqa_1.2.6         purrr_1.0.2        
+[46] tzdb_0.4.0          magrittr_2.0.3      MASS_7.3-60        
+[49] htmltools_0.5.6.1   splines_4.2.2       numDeriv_2016.8-1.1
+[52] utf8_1.2.3          crayon_1.5.2       </code></pre>
 </div>
 </div>
 </section>
